# py-project-template

./: README.md  pyproject.toml
src/application/: __init__.py
